update test config

--- a/src/it/resources/test.conf
+++ b/src/it/resources/test.conf
@@ -1,4 +1,6 @@
 akkeeper {
+  launcher.timeout = 300s
+  api.rest.port = 5052
   containers = [
     {
       name = "tmaster"
@@ -9,7 +11,7 @@ akkeeper {
         }
       ]
       cpus = 1
-      memory = 1024
+      memory = 512
       jvm-args = [ "-Xmx1G" ]
       properties {
         akka.cluster.roles.0 = "tmaster"
@@ -23,18 +25,25 @@ akkeeper {
           fqn = "by.artsiom.bigdata201.yarn.WorkerActor"
         }
       ]
-      cpus = 2
-      memory = 2048
-      jvm-args = [ "-Xmx2G" ]
+      cpus = 1
+      memory = 512
+      jvm-args = [ "-Xmx1G" ]
       properties {
         akka.cluster.roles.0 = "tworker"
       }
     }
   ]
 
+  instances = [
+    {
+      name = tmaster
+      quantity = 1
+    }
+  ]
+
   zookeeper {
-    servers = "localhost:2181"
+    servers = "localhost:12745"
   }
 }
 
-hdfs.file = "hdfs://0.0.0.0:8020/tmp/hotels.csv"
+hdfs.file = "hdfs://localhost:12345/hotels.csv"
